--- a/index.html
+++ b/index.html
@@ -2,31 +2,53 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- 
-   增加这句后，可以看到浏览器的DevTools面板的模拟移动设备状态的变化
-  -->
-  <link rel="stylesheet" href="myCSS.css"/> 
-  <title>Welcome to myCTApp</title>
+  <style>
+   *{
+    margin: 10px;
+    text-align: center;
+	font-size:30px ;
+   }
+    header{
+      border: 2px solid blue;
+      height: 200px;
+	   }
+
+    main{
+      border: 2px solid blue;
+      height: 400px;
+    }
+
+    footer{
+      border: 2px solid blue;
+      height: 100px;
+    }
+   a{
+    display: inline-block ;
+	padding:10px ;
+	color: white;
+	background-color: blue;
+	text-decoration: none ;
+   }
+  </style>
+  <title>《WebAppUI设计开发》</title>
  </head> 
  <body>
   <header>
-	<p id="lessonName" >
-     《计算思维和语言学习系统》
-    </p>
+    近十年来，html5 为核心的 web 标准的软件开发技术、Web 技术以其跨操作系统
+    平台的优势成为了广泛流行的软件开发手段。
   </header>
-  <nav>
-   <ol id ="listMenus">
-    
-   </ol>
-  </nav>
-  
-  <section>
-   <img id="teacherFace" src="https://yuzhenyu1.github.io/yuzhenyu.github.io/myFace.jpg">
- 
-  </section>
+   <main>
+    本项目选择 html5 的 web 客户端技术为技
+    术路线，展开对程序设计和软件开发的研究和实践。
+   </main>
   <footer> 
-   ‘读好书、练思维、勤编程’ ———余振宇@计算思维系列课程@江西科技师范大学 2022--2025 
+ 	CopyRight 余振宇 江西科技师范大学 2024-2025
   </footer> 
+  其他章节：
+  <a href="1.2.html" target="_blank" >1.2</a>
+  <a href="1.3.html" target="_blank" >1.3</a>
+  <a href="1.4.html" target="_blank" >1.4</a>
+  <a href="1.5.html" target="_blank" >1.5</a>
+  <a href="1.6.html" target="_blank" >1.6</a>
  </body>
 </html>
