--- a/exp/index.html
+++ b/exp/index.html
@@ -30,17 +30,19 @@
 	text-decoration: none ;
    }
   </style>
-  <title>“三段论”式的内容设计概要</title>
+  <title>《WebAppUI设计开发》</title>
  </head> 
  <body>
   <header>
-     《 我的毕设题目 》
+    近十年来，html5 为核心的 web 标准的软件开发技术、Web 技术以其跨操作系统
+    平台的优势成为了广泛流行的软件开发手段。
   </header>
    <main>
-    	我的主题内容： ‘读好书、练思维、勤编程’ @masterLijh 计算思维系列课程
+    本项目选择 html5 的 web 客户端技术为技
+    术路线，展开对程序设计和软件开发的研究和实践。
    </main>
   <footer> 
- 	CopyRight 余振宇  江西科技师范大学 2024-2025
+ 	CopyRight 余振宇 江西科技师范大学 2024-2025
   </footer> 
   其他章节：
   <a href="1.2.html" target="_blank" >1.2</a>
