--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
  	CopyRight 余振宇 江西科技师范大学 2024-2025
   </footer> 
   其他章节：
-  <a href="1.2.html" target="_blank" >1.2</a>
-  <a href="1.3.html" target="_blank" >1.3</a>
-  <a href="1.4.html" target="_blank" >1.4</a>
-  <a href="1.5.html" target="_blank" >1.5</a>
-  <a href="1.6.html" target="_blank" >1.6</a>
+  <a href="/exp/1.2.html" target="_blank" >1.2</a>
+  <a href="/exp/1.3.html" target="_blank" >1.3</a>
+  <a href="/exp/1.4.html" target="_blank" >1.4</a>
+  <a href="/exp/1.5.html" target="_blank" >1.5</a>
+  <a href="/exp/1.6.html" target="_blank" >1.6</a>
  </body>
 </html>
